# witnet-rust

./: .dockerignore  .gitignore  .travis.yml  .witnet.toml.swp  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASE.md  build.dockerfile  index.html  mkdocs.yml  rustfmt.toml  sitemap.xml  steps  wit.toml  witnet.toml  witnet01.toml  witnet_centralized_ethereum_bridge.toml  witnet_ethereum_bridge.toml
bridges/centralized-ethereum/: .env.example  Cargo.toml  README.md  wrb_abi.json
bridges/centralized-ethereum/src/: config.rs  lib.rs  main.rs
bridges/ethereum/: Cargo.toml  README.md  block_relay_abi.json  wbi_abi.json  wrb_abi.json
bridges/ethereum/examples/: post_dr.rs  read_requests.rs
bridges/ethereum/src/: config.rs  eth.rs  lib.rs  main.rs  multibimap.rs
config/: Cargo.toml
config/src/: config.rs  defaults.rs  dirs.rs  lib.rs  types.rs
config/src/config/: mod.rs  partial.rs
config/src/loaders/: mod.rs  toml.rs
core/: Cargo.toml
core/src/: config_mngr.rs  consensus.rs  global.rs  lib.rs  ser.rs  utils.rs  validations.rs
core/src/actors/: blocks_manager.rs  client.rs  codec.rs  config_manager.rs  connections_manager.rs  epoch_manager.rs  messages.rs  mod.rs  node.rs  peers_manager.rs  server.rs  session.rs  session_manager.rs  sessions_manager.rs  storage_keys.rs  storage_manager.rs
core/src/core/: block.rs  hash.rs  mod.rs  transaction.rs
core/tests/: config_manager_test.rs  config_test.rs  lib.rs  validations.rs
core/tests/actors/: codec.rs  epoch_manager.rs
core/tests/fixtures/: config.toml
crypto/: Cargo.toml
crypto/src/: cipher.rs  hash.rs  key.rs  lib.rs  merkle.rs  mnemonic.rs  pbkdf2.rs  signature.rs  test_vectors.rs
crypto/tests/: lib.rs  merkle.rs
crypto/tests/integration/: main.rs  merkle.rs
data_structures/: Cargo.toml  build.rs
data_structures/benches/: sort_active_identities.rs  staking.rs
data_structures/examples/: transactions_pool_overhead.rs
data_structures/src/: builders.rs  capabilities.rs  chain.rs  data_request.rs  error.rs  fee.rs  lib.rs  mainnet_validations.rs  migrations.rs  radon_error.rs  radon_report.rs  serialization_helpers.rs  serializers.rs  superblock.rs  tests.rs  transaction.rs  transaction_factory.rs  types.rs  utxo_pool.rs  validations.rs  vrf.rs  wit.rs  witnessing.rs
data_structures/src/chain/: mod.rs  priority.rs  tapi.rs
data_structures/src/flatbuffers/: mod.rs  protocol_generated.rs
data_structures/src/proto/: mod.rs  schema.rs  versioning.rs
data_structures/src/serializers/: decoders.rs  encoders.rs  mod.rs
data_structures/src/stack/: error.rs  mod.rs  operators.rs  parser.rs  tests.rs
data_structures/src/staking/: aux.rs  constants.rs  errors.rs  helpers.rs  mod.rs  stake.rs  stakes.rs
data_structures/src/utxo_pool/: utxo_db.rs
data_structures/tests/: builders.rs  inclusion_proofs.rs  lib.rs  proto.rs  protocol_generated.rs  reputation.rs  serialization_helpers.rs  serializers.rs  transaction_weight.rs  utxo_pool.rs
data_structures/tests/flatbuffers/: mod.rs
data_structures/tests/integration/: inclusion_proofs.rs  main.rs  proto.rs  reputation.rs  serializers.rs
net/: Cargo.toml
net/src/: lib.rs
net/src/client/: mod.rs
net/src/server/: mod.rs
node/: .Cargo.toml.swp  Cargo.toml
node/src/: config_mngr.rs  lib.rs  signature_mngr.rs  storage_mngr.rs  utils.rs
node/src/actors/: codec.rs  messages.rs  mod.rs  node.rs  storage_keys.rs
node/src/storage_mngr/: node_migrations.rs
node/tests/: config_test.rs  data_request_examples.rs  rad.rs  serialization.rs  signature_test.rs  storable.rs  utils.rs
node/tests/actors/: codec.rs  epoch_manager.rs  main.rs  rad_manager.rs
p2p/: Cargo.toml
p2p/src/: error.rs  lib.rs  types.rs
p2p/src/peers/: error.rs  mod.rs
p2p/src/sessions/: bounded_sessions.rs  error.rs  mod.rs
p2p/tests/: bounded_sessions.rs  buckets.rs  lib.rs  peers.rs  sessions.rs
p2p/tests/integration/: bounded_sessions.rs  main.rs  peers.rs
partial_struct/: Cargo.toml
partial_struct/src/: lib.rs
partial_struct/tests/: partial_struct_derive.rs
protected/: Cargo.toml
protected/src/: lib.rs  serde.rs
rad/: Cargo.toml
rad/src/: conditions.rs  error.rs  lib.rs  rad_error.rs  radon_error.rs  report.rs  script.rs  user_agents.rs
rad/src/filters/: deviation.rs  mod.rs  mode.rs
rad/src/hash_functions/: mod.rs  sha2.rs
rad/src/operators/: array.rs  boolean.rs  bytes.rs  float.rs  integer.rs  map.rs  mixed.rs  mod.rs  string.rs
rad/src/reducers/: average.rs  deviation.rs  hash_concatenate.rs  median.rs  mod.rs  mode.rs
rad/src/types/: array.rs  boolean.rs  bytes.rs  float.rs  integer.rs  map.rs  mixed.rs  mod.rs  result.rs  string.rs
rad/tests/: lib.rs
reputation/: Cargo.toml  README.md
reputation/benches/: trs.rs
reputation/src/: ars.rs  error.rs  lib.rs  trs.rs
stack/: Cargo.toml
stack/src/: lib.rs  operators.rs  parser.rs  tests.rs
storage/: Cargo.toml
storage/src/: backends.rs  error.rs  lib.rs  storage.rs
storage/src/backends/: btreemap.rs  crypto.rs  hashmap.rs  in_memory.rs  mod.rs  nobackend.rs  rocks.rs  rocksdb.rs
storage/tests/: in_memory.rs  lib.rs  storable.rs
toolkit/: Cargo.toml
toolkit/src/: data_requests.rs  errors.rs  lib.rs  main.rs
toolkit/src/cli/: mod.rs  (+3 more)
util/: Cargo.toml
util/src/: credentials.rs  error.rs  files.rs  lib.rs  logger.rs  parser.rs  timestamp.rs  types.rs
validations/: Cargo.toml
validations/benches/: reppoe.rs
validations/src/: consolidation.rs  lib.rs  mainnet_validations.rs  tests.rs  validations.rs  witnessing.rs
validations/tests/: validations.rs
wallet/: Cargo.toml  README.md  db.sql
wallet/src/: account.rs  constants.rs  crypto.rs  db.rs  err_codes.rs  error.rs  handlers.rs  key.rs  lib.rs  main.rs  mnemonic.rs  model.rs  models.rs  params.rs  radon.rs  response.rs  result.rs  rocksdb.rs  routes.rs  schema.rs  server.rs  signal.rs  signature.rs  slip32.rs  types.rs  validation.rs  wallet.rs  wallets.rs
wallet/tests/: data_requests.rs
wit/: Cargo.toml
wit/src/: adapters.rs  lib.rs  server.rs  types.rs
(+654 files in other folders)
