[package]
name = "witnet"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
publish = false
repository = "witnet/witnet-rust"
readme = "README.md"
license-file = "LICENSE"
keywords = ["witnet", "blockchain", "smart-contracts", "DON", "cryptocurrency", "crypto", "oracles", "protocol", "p2p", "rust"]
description = "An in-progress open source implementation of the Witnet protocol written in Rust."
edition = "2018"

[workspace]
members = ["config", "node", "crypto", "data_structures", "p2p", "storage", "wallet", "validations", "protected", "reputation", "net", "bridges/ethereum"]

[features]
default = ["wallet", "node"]
wallet = ["witnet_wallet"]
node = ["witnet_node"]

[badges]
travis-ci = { repository = "https://github.com/witnet/witnet-rust", branch = "master" }

[dependencies]
bytecount = "0.6.0"
directories = "2.0.2"
ctrlc = "3.1.3"
env_logger = "0.7.1"
failure = "0.1.6"
hex = "0.4.0"
itertools = "0.8.0"
log = "0.4.8"
serde_json = "1.0.41"
structopt = "0.2.14"
toml = "0.5.3"
terminal_size = "0.1.8"
lazy_static = "1.4.0"
webbrowser = "0.5.2"

witnet_wallet = { path = "./wallet", optional = true }
witnet_node = { path = "./node", optional = true }
witnet_config = { path = "./config" }
witnet_data_structures = { path = "./data_structures" }
witnet_rad = { path = "./rad" }
witnet_validations = { path = "./validations" }

[dependencies.serde]
features = ["derive"]
version = "1.0.101"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
