[package]
name = "witnet"
version = "1.5.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
publish = false
repository = "witnet/witnet-rust"
readme = "README.md"
license-file = "LICENSE"
keywords = ["witnet", "blockchain", "smart-contracts", "DON", "cryptocurrency", "crypto", "oracles", "protocol", "p2p", "rust"]
description = "An in-progress open source implementation of the Witnet protocol written in Rust."
edition = "2021"

[workspace]
members = ["config", "node", "crypto", "data_structures", "p2p", "storage", "wallet", "validations", "protected", "reputation", "net", "toolkit", "bridges/ethereum", "bridges/centralized-ethereum", "futures_utils"]

[features]
default = ["wallet", "node", "telemetry"]
node = ["witnet_node"]
telemetry = ["sentry", "witnet_node/telemetry"]
wallet = ["witnet_wallet"]

[badges]
travis-ci = { repository = "https://github.com/witnet/witnet-rust", branch = "master" }

[dependencies]
ansi_term = "0.12.1"
bytecount = "0.6.0"
ctrlc = "3.1.3"
env_logger = "0.9.0"
failure = "0.1.8"
futures = "0.3.8"
hex = "0.4.1"
itertools = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.8"
num-format = "0.4.0"
prettytable-rs = { version = "0.8.0", default-features = false }
sentry = { version = "0.23", features = ["log"], optional = true }
serde_json = "1.0.47"
structopt = "0.3.9"
terminal_size = "0.1.10"
toml = "0.5.6"
webbrowser = "0.5.2"

witnet_config = { path = "./config" }
witnet_crypto = { path = "./crypto" }
witnet_data_structures = { path = "./data_structures" }
witnet_node = { path = "./node", optional = true }
witnet_rad = { path = "./rad" }
witnet_util = { path = "./util" }
witnet_validations = { path = "./validations" }
witnet_wallet = { path = "./wallet", optional = true }

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "4c1db68"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", install = ["openssl"] }
