[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "config component"
edition = "2021"
name = "witnet_config"
version = "0.3.2"
workspace = ".."

[features]
with-rocksdb = ["rocksdb"]

[dependencies]
directories-next = "1.0.2"
failure = "0.1.8"
log = "0.4.8"
partial_struct = { path = "../partial_struct" }
rocksdb = { version = "0.13.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"

witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_protected = { path = "../protected" }

