[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "config component"
edition = "2024"
name = "witnet_config"
version = "2.0.26"
workspace = ".."

[features]
with-rocksdb = ["rocksdb"]

[dependencies]
directories-next = "1.0.2"
log = "0.4.8"
partial_struct = { path = "../partial_struct" }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "7e7a1d594dd3960ad03a7006388640f90d17dae1", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
thiserror = "2.0.12"

witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_protected = { path = "../protected" }

