[package]
name = "witnet_core"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "core component"
edition = "2018"

[dependencies]
actix = "0.7.4"
ansi_term = "0.11.0"

byteorder = "1.2.6"
bytes = "0.4"
rust-crypto = "0.2"
futures = "0.1"
jsonrpc-core = "9.0"
log = "0.4"
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.11"

witnet_data_structures = { path = "../data_structures" }
witnet_p2p = { path = "../p2p" }
witnet_storage = { path = "../storage", features = ["rocksdb-backend"] }
witnet_config = { path = "../config" }
witnet_util = { path = "../util" }
witnet_crypto = { path = "../crypto" }
