[package]
name = "witnet_crypto"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "crypto component"
edition = "2018"

[features]
default = []
with-serde = ["serde", "secp256k1/serde"]

[dependencies]
aes = "0.3.2"
bech32 = "0.7.1"
block-modes = "0.3.3"
byteorder = "1.3.2"
failure = "0.1.6"
hmac = "0.7.1"
secp256k1 = "0.15.5"
sha2 = "0.8.0"
digest = "0.8.1"
tiny-bip39 = "0.6.2"
memzero = "0.1.0"
rand = "0.7.2"
witnet_protected = { path = "../protected" }
serde = { version = "1.0.101", optional = true }
hex = "0.4.0"
ring = "0.16.9"
