[package]
name = "witnet_crypto"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "crypto component"
edition = "2018"

[features]
default = []
with-serde = ["serde", "secp256k1/serde"]

[dependencies]
aes = "0.3.2"
bech32 = "0.7.1"
block-modes = "0.3.3"
byteorder = "1.3.2"
digest = "0.8.1"
failure = "0.1.6"
hex = "0.4.0"
hmac = "0.7.1"
memzero = "0.1.0"
rand = "0.7.2"
ring = "0.16.9"
secp256k1 = "0.15.5"
serde = { version = "1.0.101", optional = true }
sha2 = "0.8.0"
tiny-bip39 = "0.6.2"

witnet_protected = { path = "../protected" }
