[package]
name = "witnet_crypto"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "crypto component"
edition = "2021"

[features]
default = []
with-serde = ["serde", "secp256k1/serde"]

[dependencies]
aes = "0.7.5"
bech32 = "0.7.2"
block-modes = "0.8.1"
byteorder = "1.3.4"
digest = "0.8.1"
failure = "0.1.8"
hex = "0.4.1"
hmac = "0.7.1"
memzero = "0.1.0"
rand = "0.7.3"
ring = "0.16.11"
secp256k1 = "0.20.3"
serde = { version = "1.0.104", optional = true }
sha2 = "0.8.1"
tiny-bip39 = "0.7.0"

witnet_protected = { path = "../protected" }
