[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "data structures component"
edition = "2021"
name = "witnet_data_structures"
version = "0.3.2"
workspace = ".."

[dependencies]
bls-signatures-rs = "0.1.0"
bech32 = "0.7.2"
bincode = "1.2.1"
byteorder = "1.3.4"
cbor-codec = { git = "https://github.com/witnet/cbor-codec.git", branch = "feat/ldexpf-shim" }
chrono = "0.4.10"
ethereum-types = "0.12.1"
failure = "0.1.8"
hex = "0.4.1"
itertools = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.8"
num_enum = "0.4.2"
ordered-float = "1.0"
partial_struct = { path = "../partial_struct" }
protobuf = { version = "2.23.0", features = ["with-serde"] }
protobuf-convert = "0.1.1"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.48"
vrf = "0.2.3"

witnet_crypto = { path = "../crypto" }
witnet_reputation = { path = "../reputation", features = ["serde"] }
witnet_protected = { path = "../protected", features = ["serde"] }
witnet_storage = { path = "../storage", features = ["rocksdb-backend"] }
witnet_util = { path = "../util" }

[build-dependencies]
exonum-build = "0.12.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "sort_active_identities"
harness = false
