[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "data structures component"
edition = "2024"
name = "witnet_data_structures"
version = "2.0.26"
workspace = ".."

[features]
rocksdb-backend = ["witnet_storage/rocksdb-backend"]
with-serde = ["rocksdb-backend"]

[dependencies]
anyhow = "1.0.98"
bech32 = "0.11.0"
bincode = "1.3.3"
bls-signatures-rs = { package="witnet-bls-signatures", version = "0.2.0" }
byteorder = "1.3.4"
cbor-codec = { git = "https://github.com/witnet/cbor-codec.git", branch = "feat/ldexpf-shim" }
ethereum-types = "0.15.1"
futures = "0.3.27"
hex = "0.4.1"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.8"
num_enum = "0.7.3"
num-traits = "0.2.15"
ordered-float = "5.0.0"
partial_struct = { path = "../partial_struct" }
protobuf = { version = "2.28.0", features = ["with-serde"] }
protobuf-convert = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.48"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
vrf = "0.2.5"

witnet_crypto = { path = "../crypto" }
witnet_reputation = { path = "../reputation", features = ["serde"] }
witnet_protected = { path = "../protected", features = ["serde"] }
witnet_storage = { path = "../storage" }
witnet_util = { path = "../util" }

[build-dependencies]
exonum-build = "0.12.0"

[dev-dependencies]
bencher = "0.1.5"
rand_distr = "0.4.3"

[[bench]]
name = "sort_active_identities"
harness = false

[[bench]]
name = "staking"
harness = false
