[package]
name = "witnet_net"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
workspace = ".."

[dependencies]
actix = { version = "0.12.0", default-features = false }
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"], branch = "fix-tcp-leak" }
failure = "0.1.8"
futures = "0.3.8"
futures-util = { version = "0.3.4", features = ["compat"] }
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
jsonrpc-ws-server = "15.1.0"
log = "0.4.8"
serde_json = "1.0.47"
serde = "1.0.104"
