[package]
name = "witnet_net"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
workspace = ".."

[dependencies]
actix = { version = "0.13.0", default-features = false }
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"], branch = "fix-tcp-leak" }
async-trait = "0.1.56"
failure = "0.1.8"
futures = "0.3.8"
futures-util = { version = "0.3.4", features = ["compat"] }
isahc = "1.7.2"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
jsonrpc-ws-server = "15.1.0"
log = "0.4.8"
rand = "0.8.5"
serde_json = "1.0.47"
serde = "1.0.104"
surf = { version = "2.3.2", default-features = false, features = ["curl-client"] }
