[package]
name = "witnet_node"
version = "0.4.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "node component"
edition = "2018"

[dependencies]
actix = { version = "0.8.3", default-features = false, features = ["resolver"] }
ansi_term = "0.12.1"
bincode = "1.2.1"
byteorder = "1.3.4"
bytes = "0.4.12"
failure = "0.1.8"
futures = "0.1.29"
futures03 = { package = "futures", version = "0.3.1" }
futures-util = { version = "0.3.4", features = ["compat"] }
itertools = "0.8.2"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
rand = "0.7.3"
rayon = "1.3.0"
secp256k1 = "0.17.2"
sentry = { version = "0.18.1", features = ["with_env_logger"], optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tokio = "0.1.22"

witnet_config = { path = "../config" }
witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_p2p = { path = "../p2p" }
witnet_protected = { path = "../protected", features = ["with-serde"]  }
witnet_rad = { path = "../rad" }
witnet_storage = { path = "../storage", features = ["rocksdb-backend", "crypto-backend"] }
witnet_util = { path = "../util" }
witnet_validations = { path = "../validations" }

[dev-dependencies]
glob = "0.3.0"

[features]
default = []
telemetry = ["sentry"]
