[package]
name = "witnet_node"
version = "0.4.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "node component"
edition = "2021"

[dependencies]
actix = { version = "0.12.0", default-features = false }
ansi_term = "0.12.1"
async-stream = "0.3"
bincode = "1.2.1"
byteorder = "1.3.4"
bytes = "1.0.0"
failure = "0.1.8"
futures = "0.3.8"
futures-util = { version = "0.3.4", features = ["compat"] }
itertools = "0.8.2"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
log = "0.4.8"
rand = "0.7.3"
pin-project-lite = "0.2"
sentry = { version = "0.23", features = ["log"], optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tokio = { version = "1.0.1", features = ["io-util", "net", "time", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
trust-dns-resolver = { version = "0.20.0" , default-features = false, features = ["tokio-runtime", "system-config"] }

witnet_config = { path = "../config" }
witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_futures_utils = { path = "../futures_utils" }
witnet_p2p = { path = "../p2p" }
witnet_protected = { path = "../protected", features = ["with-serde"]  }
witnet_rad = { path = "../rad" }
witnet_storage = { path = "../storage", features = ["rocksdb-backend"] }
witnet_util = { path = "../util" }
witnet_validations = { path = "../validations" }

[dev-dependencies]
env_logger = "0.9.0"
glob = "0.3.0"

[features]
default = []
telemetry = ["sentry"]
