[package]
name = "witnet_p2p"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "p2p component"
edition = "2018"

[dependencies]
failure = "0.1.6"
rand = "0.7.2"
witnet_util = { path = "../util" }
witnet_crypto = { path = "../crypto" }
log = "0.4.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.101"
