[package]
name = "witnet_p2p"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "p2p component"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "2.0.12"

witnet_config = { path = "../config" }
witnet_crypto = { path = "../crypto" }
witnet_util = { path = "../util" }
