[package]
name = "witnet_protected"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
description = "Protected bytes struct that will be zeroed when dropped"
edition = "2021"

[features]
with-serde = ["serde"]

[dependencies]
memzero = "0.1.0"
serde = { version = "1.0.104", optional = true }
