[package]
name = "witnet_rad"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
workspace = ".."
description = "RAD component"

[dependencies]
cbor-codec = { git = "https://github.com/witnet/cbor-codec.git", branch = "feat/ldexpf-shim" }
failure = "0.1.8"
futures = "0.3.4"
hex = "0.4.1"
if_rust_version = "1.0.0"
json = "0.12.1"
log = "0.4.8"
num_enum = "0.4.2"
ordered-float = "1.0"
rand = "0.7.3"
serde = "1.0.111"
serde_cbor = "0.11.1"
surf = { version = "1.0.3", default-features = false, features = ["native-client"] }
url = "2.1.1"

witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
witnet_util = { path = "../util" }
