[package]
name = "witnet_rad"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
workspace = ".."
description = "RAD component"

[dependencies]
cbor-codec = { git = "https://github.com/witnet/cbor-codec.git", branch = "feat/ldexpf-shim" }
failure = "0.1.8"
futures = "0.3.4"
hex = "0.4.1"
if_rust_version = "1.0.0"
# the http crate is used to perform additional validations before passing arguments to the surf http client
# the version of http must be kept in sync with the version used by surf
http = "0.2.1"
json = "0.12.1"
log = "0.4.8"
minidom = { git = "https://github.com/witnet/xmpp-rs", rev = "bc8a33ff5da95ee4039ad7ee3376c100d9e35c74" }
num_enum = "0.4.2"
ordered-float = "1.0"
rand = "0.7.3"
serde = "1.0.111"
serde_cbor = "0.11.1"
surf = { version = "2.3.2", default-features = false, features = ["curl-client"] }
# the url crate is used to perform additional validations before passing arguments to the surf http client
# the version of url must be kept in sync with the version used by surf
url = "2.1.1"

witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
witnet_util = { path = "../util" }
