[package]
name = "witnet_rad"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2024"
workspace = ".."
description = "RAD component"

[features]
rocksdb-backend = ["witnet_data_structures/rocksdb-backend"]

[dev-dependencies]
tokio = "1.44.1"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bs58 = "0.5.1"
cbor-codec = { git = "https://github.com/witnet/cbor-codec.git", branch = "feat/ldexpf-shim" }
futures = "0.3.31"
hex = "0.4.1"
if_rust_version = "1.0.0"
jsonpath = "0.1.1"
# the http crate is used to perform additional validations before passing arguments to the surf http client
# the version of http must be kept in sync with the version used by surf
http = "0.2.1"
log = "0.4.8"
minidom = { git = "https://github.com/witnet/xmpp-rs", rev = "bc8a33ff5da95ee4039ad7ee3376c100d9e35c74" }
num_enum = "0.7.3"
ordered-float = "3.9.2"
rand = "0.7.3"
regex = "1.4.2"
reqwest = { version = "0.12.15", features = ["socks"] }
serde = "1.0.111"
serde_cbor = "0.11.2"
serde_json = "1.0.96"
slicestring = "0.3.2"
thiserror = "2.0.12"
tokio = { version = "1.0.1", features = ["io-util", "net", "time", "sync"] }
# the url crate is used to perform additional validations before passing arguments to the surf http client
# the version of url must be kept in sync with the version used by surf in the `witnet_net` crate
url = "2.1.1"

witnet_config = { path = "../config" }
witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
witnet_net = { path = "../net" }
witnet_util = { path = "../util" }
