[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "Reputation engine"
edition = "2018"
name = "witnet_reputation"
version = "0.3.2"
workspace = ".."

[dependencies]
failure = "0.1.6"
log = "0.4.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.101"
optional = true

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "trs"
harness = false

