[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "Reputation engine"
edition = "2021"
name = "witnet_reputation"
version = "0.3.2"
workspace = ".."

[dependencies]
failure = "0.1.8"
serde = { version = "1.0.104", features = ["derive"], optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "trs"
harness = false

