[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "Reputation engine"
edition = "2024"
name = "witnet_reputation"
version = "0.3.2"
workspace = ".."

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.104", features = ["derive"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "trs"
harness = false

