[package]
name = "witnet_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scriptful = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.81"
witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
