[package]
name = "witnet_storage"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
workspace = ".."
edition = "2024"
description = "Witnet storage module that conveniently abstracts a key/value API away from specific storage backends"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", rev = "7e7a1d594dd3960ad03a7006388640f90d17dae1", optional = true }

[features]
rocksdb-backend = ["rocksdb"]
