[package]
name = "witnet_toolkit"
version = "1.6.8"
authors = ["Adán SDPC <adan.sdpc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
hex = "0.4.3"
regex = "1.5.5"
serde_json = "1.0.66"
structopt = "0.3.22"
witnet_data_structures = { path = "../data_structures", default-features = false }
witnet_rad = { path = "../rad", default-features = false }
