[package]
name = "witnet_util"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
workspace = ".."

[dependencies]
chrono = "0.4.9"
failure = "0.1.6"
lazy_static = "1.4.0"
log = "0.4.8"
ntp = { git = "https://github.com/witnet/ntp" }
time = "0.1.42"
serde = { version = "1.0.101", features = ["derive"] }
