[package]
name = "witnet_util"
version = "0.3.2"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
workspace = ".."

[dependencies]
chrono = "0.4.10"
humantime = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.8"
ntp = { git = "https://github.com/witnet/ntp" }
serde = { version = "1.0.104", features = ["derive"] }
