[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "validations component"
edition = "2021"
name = "witnet_validations"
version = "0.3.2"
workspace = ".."

[dependencies]
failure = "0.1.8"
itertools = "0.8.2"
log = "0.4.8"

witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
witnet_rad = { path = "../rad" }

[dev-dependencies]
approx = "0.5.0"
bencher = "0.1.5"
hex = "0.4.3"
witnet_config = { path = "../config" }
witnet_protected = { path = "../protected" }

[[bench]]
name = "reppoe"
harness = false
