[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
description = "validations component"
edition = "2024"
name = "witnet_validations"
version = "0.3.2"
workspace = ".."

[dependencies]
anyhow = "1.0.98"
itertools = "0.11.0"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "2.0.12"
url = "2.2.2"

witnet_config = { path = "../config" }
witnet_crypto = { path = "../crypto" }
witnet_data_structures = { path = "../data_structures" }
witnet_rad = { path = "../rad" }
num-traits = "0.2.18"

[dev-dependencies]
approx = "0.5.0"
bencher = "0.1.5"
hex = "0.4.3"
witnet_protected = { path = "../protected" }

[[bench]]
name = "reppoe"
harness = false
