[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
name = "witnet_wallet"
version = "0.3.2"
workspace = ".."

[dependencies]
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"] }
bincode = "1.2.1"
log = "0.4.8"
jsonrpc-core = "14.0.5"
futures = "0.1.29"
futures-util = "0.3.4"
futures03 = { package = "futures", version = "0.3.1" }
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.47"
rocksdb = "0.13.0"
rayon = "1.3.0"
num_cpus = "1.12.0"
jsonrpc-pubsub = "14.0.6"
actix = "0.8.3"
tokio-signal = "0.2.9"
failure = "0.1.8"
hex = "0.4.1"
rand = "0.7.3"
chrono = "0.4.10"

witnet_net = { path = "../net" }
witnet_config = { path = "../config", features = ["with-rocksdb"] }
witnet_rad = { path = "../rad" }
witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_protected = { path = "../protected", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_validations = { path = "../validations" }

[dev-dependencies]
actix-rt = "1.1.1"
serde_cbor = "0.11.1"