[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
name = "witnet_wallet"
version = "0.3.2"
workspace = ".."

[dependencies]
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"], branch = "fix-tcp-leak" }
bincode = "1.2.1"
log = "0.4.8"
jsonrpc-core = "15.1.0"
futures01 = { package = "futures", version = "0.1.29"}
futures-util = "0.3.8"
futures = "0.3.8"
itertools = "0.8.2"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.47"
rocksdb = "0.13.0"
num_cpus = "1.12.0"
jsonrpc-pubsub = "15.1.0"
actix = { version = "0.12.0", default-features = false }
tokio = { version = "1.0", features = ["signal"] }
failure = "0.1.8"
hex = "0.4.1"
rand = "0.7.3"
chrono = "0.4.10"
bech32 = "0.7.2"

witnet_futures_utils = { path = "../futures_utils" }
witnet_net = { path = "../net" }
witnet_config = { path = "../config", features = ["with-rocksdb"] }
witnet_crypto = { path = "../crypto", features = ["with-serde"] }
witnet_data_structures = { path = "../data_structures" }
witnet_protected = { path = "../protected", features = ["with-serde"] }
witnet_rad = { path = "../rad" }
witnet_util = { path = "../util" }
witnet_validations = { path = "../validations" }
