[package]
name = "witnet-centralized-ethereum-bridge"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"

[dependencies]
actix = { version = "0.11.0-beta.1", default-features = false }
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"], branch = "fix-tcp-leak" }
ctrlc = "3.1.3"
env_logger = "0.7.1"
futures-util = { version = "0.3.8", features = ["compat"] }
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
structopt = "0.3.9"
toml = "0.5.6"
web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "47b4f04bd0f3e879d4f937f86cfbfbd1a340811c" }
witnet_data_structures = { path = "../../data_structures" }
witnet_validations = { path = "../../validations" }
