[package]
name = "witnet-centralized-ethereum-bridge"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"

[dependencies]
actix = { version = "0.12.0", default-features = false }
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"], branch = "fix-tcp-leak" }
ctrlc = "3.1.3"
env_logger = "0.9.0"
futures-util = { version = "0.3.8", features = ["compat"] }
hex = "0.4.3"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
structopt = "0.3.9"
tokio = "1.5.0"
toml = "0.5.6"
web3 = { version = "0.18.0", default-features = false, features = ["http-tls"] }
witnet_data_structures = { path = "../../data_structures" }
witnet_config = { path = "../../config" }
witnet_net = { path = "../../net" }
witnet_node = { path = "../../node" }
witnet_util = { path = "../../util" }
witnet_validations = { path = "../../validations" }
