[package]
name = "witnet-ethereum-bridge"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"

[dependencies]
async-jsonrpc-client = { git = "https://github.com/witnet/async-jsonrpc-client", features = ["tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
toml = "0.4.10"
tokio-core = "0.1"
web3 = "0.7"
witnet_data_structures = { path = "../../data_structures" }
